[package]
name = "hashcache"
version = "0.1.0"
edition = "2021"
default-run = "hashcache"

[dependencies]
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
sled = "0.34.7"
aws-sdk-s3 = "1.0"
aws-config = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
dotenv = "0.15"
